src/objects/Business__c.object
<CustomObject>
    <fields>
        <fullName>ABN__c</fullName>
        <externalId>true</externalId>
        <label>ABN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Businesses</relationshipLabel>
        <relationshipName>Businesses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <label>Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Disturb_Expiry__c</fullName>
        <label>Do Not Disturb Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Google_Place_ID__c</fullName>
        <externalId>true</externalId>
        <label>Google Place ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_LatLong__c</fullName>
        <formula>NOT(ISBLANK(LatLong__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has LatLong</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Contacted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Contacted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Businesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Contacted__c</fullName>
        <label>Last Contacted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Result__c</fullName>
        <label>Last Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LatLong_Error__c</fullName>
        <label>LatLong Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LatLong__c</fullName>
        <label>LatLong</label>
        <scale>8</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Lat__c</fullName>
        <label>Lat</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long__c</fullName>
        <label>Long</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sensis_ID__c</fullName>
        <externalId>true</externalId>
        <label>Sensis ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Business</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sensis_ID__c</columns>
        <columns>Google_Place_ID__c</columns>
        <columns>Account__c</columns>
        <columns>Last_Contacted__c</columns>
        <columns>Do_Not_Disturb_Expiry__c</columns>
        <columns>LatLong__Latitude__s</columns>
        <columns>LatLong__Longitude__s</columns>
        <columns>LatLong_Error__c</columns>
        <columns>Lat__c</columns>
        <columns>Long__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Businesses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>